feat: add new translations for various terms in multiple languages

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Permitir la venta sin stock en nuevos productos",
     "allow-update": "Permitir modificar",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Importe",
     "amount-without-discount": "Precio sin descuento",
@@ -158,6 +160,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Staňte se sponzorem",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -570,12 +573,16 @@
     "error-write-cert": "Chyba při zapisování certifikátu",
     "errors": "Errores",
     "es_EC": "Španělština (Ekvádor)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
     "es-tax-regime-cash-criteria": "Hotovostní kritéria",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Zvláštní režim investičního zlata",
     "es-tax-regime-group-entities": "Zvláštní režim skupiny subjektů",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Régimen simplificado",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Zvláštní režimy vztahující se na telekomunikační služby, vysílání nebo televizi a služby poskytované elektronickou cestou",
     "es-tax-regime-travel": "Zvláštní režim cestovních agentur",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando controlador: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Bloquear asiento",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Stock mínimo",
@@ -1105,7 +1119,9 @@
     "opened": "Abierto",
     "opening-acounting-completed": "Apertura de ejercicio correcta",
     "opening-operation": "Apertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operación",
+    "operation-export": "Operación exportación",
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
@@ -1180,6 +1196,8 @@
     "phones": "Teléfonos",
     "php-extension-needed": "Ve zkonfiguraci PHP je vyžadováno rozšíření %extension%",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Doporučuje se používat verzi PHP mezi %min_version% a %max_version%. Aktuálně máte %version%.",
     "physical-stock": "Stock físico",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Actualización del plugin %pluginName% a la versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-required": "Plugins requeridos",
     "points": "Puntos",
     "points-of-interest": "Body zájmu.",
     "port": "Puerto",
@@ -1418,6 +1437,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Software del servidor",
     "service": "Servicio",
     "services": "Servicios",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
+    "successive-tract": "successive-tract",
     "sum": "Součet",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
@@ -1652,7 +1673,7 @@
     "unlink-install-ok": "Instalace byla úspěšně odebrána záznamu.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Nesecure archivo",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
@@ -1735,6 +1756,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "work-certification": "Certificación",
     "work-events": "Pracovní události",
     "working-hours": "Pracovní hodiny",
     "works": "Trabajos",
