--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Verkauf ohne Lager zulassen",
     "allow-sale-without-stock-n": "Verkauf ohne Lagerbestand für neue Produkte zulassen",
     "allow-update": "Aktualisierung zulassen",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Immer an die Unternehmens-E-Mail",
     "amount": "Menge",
     "amount-without-discount": "Preis ohne Rabatt",
@@ -158,6 +160,7 @@
     "barcode": "Strichcode",
     "bcc": "BCC",
     "become-sponsor": "Sponsor werden",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -570,12 +573,16 @@
     "error-write-cert": "Fehler beim Schreiben des Zertifikats",
     "errors": "Fehler",
     "es_EC": "es_EC",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
     "es-tax-exception-e2": "Spanien: Ausnahme nach Artikel 21 des Umsatzsteuergesetzes",
     "es-tax-exception-e3": "Spanien: Ausnahme nach Artikel 22 des Umsatzsteuergesetzes",
     "es-tax-exception-e4": "Spanien: Ausnahme nach Artikel 23 und 24 des Umsatzsteuergesetzes",
     "es-tax-exception-e5": "Spanien: Ausnahme nach Artikel 25 des Umsatzsteuergesetzes",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-cash-criteria": "K",
     "es-tax-regime-especial-agp": "Besonderes Regime für Landwirtschaft, Viehzucht und Fischerei",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Allgemeines Regime",
     "es-tax-regime-gold": "Besonderes Regime für Investmentgold",
     "es-tax-regime-group-entities": "Besonderes Regime der Unternehmensgruppe",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Vereinfachtes Regime",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Spanische Sonderregelung",
     "es-tax-regime-telecom": "Besondere Regime für Telekommunikations-, Rundfunk- oder Fernsehdienste und für elektronische Dienstleistungen",
     "es-tax-regime-travel": "Besonderes Regime der Reisebüros",
@@ -914,6 +925,7 @@
     "list": "Liste",
     "load-def-acc-plan": "Laden Sie den Standardkontenplan",
     "loading-controller": "Controller laden: '0'",
+    "local-business-rental": "Alquiler locales",
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts ist ein Billing und Accounting-Software für kleine Unternehmen. Es ist freie Software unter der GNU\/LGPL Lizenz.",
     "method-payment": "Zahlungsart",
     "mime-type": "Mime-Typ",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
     "minimum-stock": "Mindestbestand",
@@ -1105,7 +1119,9 @@
     "opened": "Geöffnet",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Öffnung",
+    "operating-system": "Sistema Operativo",
     "operation": "Operation",
+    "operation-export": "Operación exportación",
     "operator": "Bediener",
     "option": "Option",
     "optional": "optional",
@@ -1180,6 +1196,8 @@
     "phones": "Telefonnummern",
     "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
     "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "PHP-Endsupport",
     "php-version-too-new": "Es wird empfohlen, eine PHP-Version zwischen %min_version% und %max_version% zu verwenden. Derzeit haben Sie die Version %version%.",
     "physical-stock": "Physischer Bestand",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Aktualliesierung des Plugins %pluginName% auf Version %version%",
     "plugins": "Plugins",
     "plugins-p": "Plugins ermöglichen das Hinzufügen neuer Funktionen. Aktiviere die, die du jetzt benötigst, oder mache es später im Administratormenü.",
+    "plugins-required": "Plugins requeridos",
     "points": "Punkte",
     "points-of-interest": "Sehenswürdigkeiten",
     "port": "Puerto",
@@ -1418,6 +1437,7 @@
     "serierb": "Serie RB",
     "series": "Serie",
     "server": "Server:",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Server-Software",
     "service": "Dienstleistung",
     "services": "Dienstleistungen",
@@ -1508,6 +1528,7 @@
     "subtotal": "Zwischensumme",
     "subtract": "Subtrahieren",
     "success": "Erfolg",
+    "successive-tract": "successive-tract",
     "sum": "Summe",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
@@ -1735,6 +1756,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
+    "work-certification": "Certificación",
     "work-events": "Arbeitsevents",
     "working-hours": "Arbeitszeit",
     "works": "Arbeiten",
