--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Allow sale without stock",
     "allow-sale-without-stock-n": "Allow out-of-stock sale on new products",
     "allow-update": "Allow update",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Always to the company email",
     "amount": "Amount",
     "amount-without-discount": "Amount without discount",
@@ -158,6 +160,7 @@
     "barcode": "Barcode",
     "bcc": "BCC",
     "become-sponsor": "Become a sponsor",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
@@ -389,7 +392,7 @@
     "data-source": "Origin data",
     "database": "Database",
     "database-error": "Error connecting to the database",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ If the program is installed on your PC, you probably forgot to activate MySQL or it has problems activating.",
     "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
     "database-name-must-be-lowercase": "The database name must be lowercase",
     "date": "Date",
@@ -570,12 +573,16 @@
     "error-write-cert": "Error writing certificate",
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
     "es-tax-exception-e2": "Spain: exception by article 21 of the VAT Law",
     "es-tax-exception-e3": "Spain: exception by article 22 of the VAT Law",
     "es-tax-exception-e4": "Spain: exception by article 23 and 24 of the VAT Law",
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
     "es-tax-regime-especial-agp": "Special regime for agriculture, livestock and fisheries",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "General Regime",
     "es-tax-regime-gold": "Special regime for investment gold",
     "es-tax-regime-group-entities": "Special regime of the group of entities",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Simplified Regime",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Equivalence surcharge",
     "es-tax-regime-telecom": "Special regimes applicable to telecommunications, radio broadcasting or television services and those provided electronically",
     "es-tax-regime-travel": "Special scheme for travel agents",
@@ -807,7 +818,7 @@
     "invalid-iso-code": "Invalid ISO code ''%iso-code%''.",
     "invalid-number": "Invalid number: %number%",
     "invalid-request": "Invalid request",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Invalid token.",
     "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Invalid web address: %web%",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Load default accounting plan",
     "loading-controller": "Loading controller: '%controllerName%'",
+    "local-business-rental": "Rental of premises",
     "location": "Location",
     "lock-accounting": "Lock accounting",
     "lock-entry": "Lock entry",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts is a billing and accounting software for SMEs. It is free software under the GNU\/LGPL license.",
     "method-payment": "Method of payment",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimum amount with CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimum amount without CIF\/NIF",
     "minimum-stock": "Minimum stock",
@@ -1105,7 +1119,9 @@
     "opened": "Opened",
     "opening-acounting-completed": "Opening acounting completed",
     "opening-operation": "Opening",
+    "operating-system": "Sistema Operativo",
     "operation": "Operation",
+    "operation-export": "Operación exportación",
     "operator": "Operator",
     "option": "Option",
     "optional": "optional",
@@ -1180,6 +1196,8 @@
     "phones": "Phones",
     "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
     "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
     "physical-stock": "Physical stock",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Update of plugin %pluginName% to version %version%",
     "plugins": "Plugins",
     "plugins-p": "Plugins allow adding new features. Add the ones you need now, or do it whenever you want from the admin menu.",
+    "plugins-required": "Plugins requeridos",
     "points": "Points",
     "points-of-interest": "Points of interest",
     "port": "Port",
@@ -1418,6 +1437,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Server",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Server Software",
     "service": "Service",
     "services": "Services",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Subtract",
     "success": "Success",
+    "successive-tract": "successive-tract",
     "sum": "Sum",
     "sum-netos-line-tax-must-be": "The sum of the net of the VAT lines should be: %lineNet%",
     "sum-total-line-tax-must-be": "The sum of the VAT totals of the VAT lines should be: %lineTotalTax%",
@@ -1652,7 +1673,7 @@
     "unlink-install-ok": "Installation cleared registry successfully.",
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Unsafe file.",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
@@ -1735,6 +1756,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
+    "work-certification": "Certificación",
     "work-events": "Working events",
     "working-hours": "Work schedule",
     "works": "Works",
