--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Baimendu stock gabeko salmenta",
     "allow-sale-without-stock-n": "Produktu berriak stockik gabe saltzea baimendu",
     "allow-update": "Onartu eguneratzea",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Beti enpresaren posta elektronikora",
     "amount": "Zenbatekoa",
     "amount-without-discount": "Prezioa beherapenik gabe",
@@ -158,6 +160,7 @@
     "barcode": "Barra-kodea",
     "bcc": "BCC",
     "become-sponsor": "Babesle izan zaitez",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Handia",
     "billing": "Fakturazioa",
     "billing-address": "Fakturazio helbidea",
@@ -570,12 +573,16 @@
     "error-write-cert": "Errore bat gertatu da ziurtagiria idaztean",
     "errors": "Erroreak",
     "es_EC": "Espainiako gaztelania (Ekuador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
     "es-tax-exception-e2": "Espainia: BEZaren Legearen 21. artikuluaren salbuespena",
     "es-tax-exception-e3": "Espainia: BEZaren Legearen 22. artikuluaren salbuespena",
     "es-tax-exception-e4": "Espainia: BEZaren 23. eta 24. legeen artikuluen salbuespena",
     "es-tax-exception-e5": "Espainia: BEZaren 25. legearen artikuluaren salbuespena",
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
     "es-tax-regime-cash-criteria": "Diru-irizpideak",
     "es-tax-regime-especial-agp": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Erregimen orokorra",
     "es-tax-regime-gold": "Inbertsiorako urreraren erregimen berezia",
     "es-tax-regime-group-entities": "Entitate taldearen araubide berezia",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Erregimen sinplifikatua",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Baliokidetasun errekargua",
     "es-tax-regime-telecom": "Telekomunikazio, irrati-difusio edo telebista-zerbitzuei eta elektronikoki ematen direnei aplikatzekoak diren araubide bereziak",
     "es-tax-regime-travel": "Bidaia-agentzientzako araubide berezia",
@@ -914,6 +925,7 @@
     "list": "Zerrenda",
     "load-def-acc-plan": "Kargatu kotabilitate plan lehenetsia",
     "loading-controller": "'%controllerName%' kontrolatzailea kargatzen",
+    "local-business-rental": "Alquiler locales",
     "location": "Kokapena",
     "lock-accounting": "Kontabilitatea blokeatu",
     "lock-entry": "Idazpena blokeatu",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts ETE-entzako fakturazio eta kontabilitate softwarea da. GNU\/LGPL lizentziapeko software librea da.",
     "method-payment": "Ordainketa mota",
     "mime-type": "Mime Mota",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Gutxieneko zenbatekoa IFK\/IFZrekin",
     "minimum-amount-without-cifnif": "Gutxieneko zenbatekoa IFK\/IFZ gabe",
     "minimum-stock": "Stock minimoa",
@@ -1105,7 +1119,9 @@
     "opened": "Irekita",
     "opening-acounting-completed": "Ekitaldi irekitze zuzena",
     "opening-operation": "Irekitzea",
+    "operating-system": "Sistema Operativo",
     "operation": "Operazioa",
+    "operation-export": "Operación exportación",
     "operator": "Operadorea",
     "option": "Aukera",
     "optional": "aukerakoa",
@@ -1180,6 +1196,8 @@
     "phones": "Telefonoak",
     "php-extension-needed": "PHP-ren konfigurazioan %extension% luzapena behar da",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "php-version-too-new": "%min_version% eta %max_version% artean PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
     "physical-stock": "Stock fisikoa",
@@ -1205,6 +1223,7 @@
     "plugin-update": "%PluginName% plugina %version%. bertsiora eguneratu da",
     "plugins": "Pluginak",
     "plugins-p": "Pluginak funtzio berriak gehitzeko aukera ematen dute. Aktibatu behar dituzunak orain, edo nahi duzunean administratzailearen menutik.",
+    "plugins-required": "Plugins requeridos",
     "points": "Puntuak",
     "points-of-interest": "Intereseko puntu",
     "port": "Ataka",
@@ -1418,6 +1437,7 @@
     "serierb": "RB seriea",
     "series": "Serieak",
     "server": "Zerbitzaria",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Zerver software",
     "service": "Zerbitzua",
     "services": "Zerbitzuak",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotala",
     "subtract": "Kendu",
     "success": "Arrakasta",
+    "successive-tract": "successive-tract",
     "sum": "Batuketa",
     "sum-netos-line-tax-must-be": "BEZ lerroen neto-en batura %lineNet% izan beharko luke.",
     "sum-total-line-tax-must-be": "BEZ lerroen BEZ totalen batura hau izan behar du: %lineTotalTax%",
@@ -1735,6 +1756,7 @@
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
+    "work-certification": "Certificación",
     "work-events": "Lan ekitaldiak",
     "working-hours": "Lan orduak",
     "works": "Lanak",
