--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Autoriser la vente sans stock",
     "allow-sale-without-stock-n": "Autoriser la vente des nouveaux produits sans stock",
     "allow-update": "Autoriser la mise à jour",
+    "already-installed": "Déjà installé",
+    "already-installed-p": "Le programme est déjà installé",
     "always-to-company-email": "Toujours à l'email de l'entreprise",
     "amount": "Montant",
     "amount-without-discount": "Quantité sans remise",
@@ -158,6 +160,7 @@
     "barcode": "code à barre",
     "bcc": "CCI",
     "become-sponsor": "Devenez sponsor",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Grand",
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
@@ -570,12 +573,16 @@
     "error-write-cert": "Erreur lors de l'écriture du certificat",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
     "es-tax-exception-e2": "Espagne: exception pour l'article 21 de la loi sur la TVA",
     "es-tax-exception-e3": "Espagne: exception pour l'article 22 de la loi sur la TVA",
     "es-tax-exception-e4": "Espagne: exception pour les articles 23 et 24 de la loi sur la TVA",
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
     "es-tax-regime-cash-criteria": "Critère de caisse",
     "es-tax-regime-especial-agp": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Régime général",
     "es-tax-regime-gold": "Régime spécial de l'or d'investissement",
     "es-tax-regime-group-entities": "Régime spécial de groupe d'entités",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Régime simplifié",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Surtaxe d'équivalence",
     "es-tax-regime-telecom": "Régimes spéciaux applicables aux services de télécommunications, de radiodiffusion ou de télévision et aux services fournis par voie électronique",
     "es-tax-regime-travel": "Régime spécial des agences de voyage",
@@ -807,7 +818,7 @@
     "invalid-iso-code": "Code ISO '%iso-code%' invalide.",
     "invalid-number": "Nombre incorrect : %number%",
     "invalid-request": "Requête incorrecte",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Jeton non valide",
     "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
     "invalid-user-can-permission": "Permission non valide : %permission%. Les autorisations disponibles sont access, delete, export, import, update et only-owner-data.",
     "invalid-web": "Dirección web no válida",
@@ -914,6 +925,7 @@
     "list": "Liste",
     "load-def-acc-plan": "Charger le plan comptable par défaut",
     "loading-controller": "Chargement du contrôleur: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Localisation",
     "lock-accounting": "Verrouiller la comptabilité",
     "lock-entry": "Verrouiller l'entrée",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts est un logiciel de facturation et de comptabilité pour pymes. C'est un logiciel libre sous licence GNU \/ LGPL.",
     "method-payment": "Moyen de paiement",
     "mime-type": "Type MIME",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Montant minimum avec CIF\/NIF",
     "minimum-amount-without-cifnif": "Montant minimum sans CIF\/NIF",
     "minimum-stock": "Stock minimum",
@@ -1105,7 +1119,9 @@
     "opened": "Ouvert",
     "opening-acounting-completed": "Ouverture de l'exercice achevée",
     "opening-operation": "Apertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operación",
+    "operation-export": "Operación exportación",
     "operator": "Opérateur",
     "option": "option",
     "optional": "Optionnel",
@@ -1180,6 +1196,8 @@
     "phones": "Téléphones",
     "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
     "php-version-too-new": "Il est recommandé d'utiliser une version de PHP entre %min_version% et %max_version%. Vous avez actuellement la %version%",
     "physical-stock": "Stock physique",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Mise à jour du module %pluginName% vers la version %version%",
     "plugins": "Modules",
     "plugins-p": "Les modules permettent d'ajouter de nouvelles fonctionnalités. Ajoutez ceux dont vous avez besoin maintenant. Vous pourrez toujours le faire quand vous le souhaitez depuis le menu Administration.",
+    "plugins-required": "Plugins requeridos",
     "points": "Points",
     "points-of-interest": "Points d'intérêt",
     "port": "Port",
@@ -1418,6 +1437,7 @@
     "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Logiciel du serveur",
     "service": "Service",
     "services": "Services",
@@ -1508,6 +1528,7 @@
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
     "success": "Succès",
+    "successive-tract": "successive-tract",
     "sum": "Somme",
     "sum-netos-line-tax-must-be": "La somme du net des lignes de TVA devrait être: %lineNet%",
     "sum-total-line-tax-must-be": "La somme des totaux de TVA des lignes de TVA devrait être: %lineTotalTax%",
@@ -1735,6 +1756,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
+    "work-certification": "Certificación",
     "work-events": "Événements de travail",
     "working-hours": "Heures de travail",
     "works": "Emplois",
