--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Permitir venda sen stock",
     "allow-sale-without-stock-n": "Permitir venta sen stock nos novos produtos",
     "allow-update": "Permitir modificar",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "O programa xa está instalado",
     "always-to-company-email": "Sempre ó email da empresa",
     "amount": "Cantidade",
     "amount-without-discount": "Prezo sen desconto",
@@ -158,6 +160,7 @@
     "barcode": "Código de barras",
     "bcc": "BCC",
     "become-sponsor": "Faite patrocinador",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -390,7 +393,7 @@
     "database": "Base de datos",
     "database-error": "Erro ó conectar á base de datos",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 se o programa está instalado nun servidor ou hosting, probablemente cambiaste o usuario ou contrasinal da base de datos, ou alcanzaches algún límite de uso do hosting.",
     "database-name-must-be-lowercase": "O nome da base de datos debe ser en minúsculas",
     "date": "Data",
     "date-in": "Data en",
@@ -570,12 +573,16 @@
     "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
     "es-tax-exception-e2": "España: excepción polo artigo 21 da Ley do IVE",
     "es-tax-exception-e3": "España: excepción polo artigo 22 da Ley do IVE",
     "es-tax-exception-e4": "España: excepción polo artigo 23 e 24 da Ley do IVE",
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Réxime especial da agricultura, gandería e pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Réxime xeral",
     "es-tax-regime-gold": "Rexime especial do ouro de inversión",
     "es-tax-regime-group-entities": "Rexime especial do grupo de entidades",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Réxime simplificado",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Rexímenes especiais aplicables aos servicios de telecomunicacións, de radiodifusión ou de televisión e aos prestados por vía electrónica",
     "es-tax-regime-travel": "Rexime especial das axencias de viaxes",
@@ -914,6 +925,7 @@
     "list": "Listaxe",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
     "loading-controller": "Cargando o controlador: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Localización",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear asento",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts é un software de facturación e contabilidade para pemes. É software libre baixo licencia GNU\/LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sen CIF\/NIF",
     "minimum-stock": "Stock mínimo",
@@ -1105,7 +1119,9 @@
     "opened": "Aberto",
     "opening-acounting-completed": "Apertura de exercicio correcta",
     "opening-operation": "Apertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operación",
+    "operation-export": "Operación exportación",
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
@@ -1180,6 +1196,8 @@
     "phones": "puntos",
     "php-extension-needed": "Requirese a extensión %extension% na configuración de PHP",
     "php-extension-not-found": "Non tes a extensión %extension% de PHP instalada.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "php-version-too-new": "Recoméndase usar unha versión de PHP entre a %min_version% e a %max_version%. Actualmente tes a %version%",
     "physical-stock": "Accións físicas",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Actualización do plugin %pluginName% á versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Os  plugins permiten engadir novas funcións. Activa os que necesites agora, ou ben faino cando queiras desde o menú administrador.",
+    "plugins-required": "Plugins requeridos",
     "points": "puntos",
     "points-of-interest": "Puntos de interese",
     "port": "Porto",
@@ -1418,6 +1437,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Software do servidor",
     "service": "Servizo",
     "services": "Servizos",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
+    "successive-tract": "successive-tract",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "A suma dos netos das liñas de IVE debe ser: %lineNet%",
     "sum-total-line-tax-must-be": "A suma dos totais de IVE das liñas de IVE debe ser: %lineTotalTax%",
@@ -1653,7 +1674,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
     "unsafe-file": "Archivo no seguro",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgúns tipos de arquivos, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
     "until-subaccount": "Ata subconta",
@@ -1735,6 +1756,7 @@
     "wizard": "asistente",
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
+    "work-certification": "Certificación",
     "work-events": "Eventos de traballo",
     "working-hours": "Horario de traballo",
     "works": "Traballos",
