--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Verkauf ohne Lagerbestand zulassen",
     "allow-sale-without-stock-n": "consentire-vendita-senza-stock-n",
     "allow-update": "Consenti aggiornamento",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Sempre alla mail aziendale",
     "amount": "Quantità",
     "amount-without-discount": "Importo senza sconto",
@@ -158,6 +160,7 @@
     "barcode": "Codice a barre",
     "bcc": "CCO",
     "become-sponsor": "Diventa sponsor",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "grande",
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
@@ -570,12 +573,16 @@
     "error-write-cert": "Errore durante la scrittura del certificato",
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
     "es-tax-exception-e2": "Spagna: eccezione per l'articolo 21 della legge sull'IVA",
     "es-tax-exception-e3": "Spagna: eccezione per l'articolo 22 della legge sull'IVA",
     "es-tax-exception-e4": "Spagna: eccezione per gli articoli 23 e 24 della legge sull'IVA",
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
     "es-tax-regime-especial-agp": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Regime generale",
     "es-tax-regime-gold": "Regime speciale dell'oro di investimento",
     "es-tax-regime-group-entities": "Regime fiscale speciale per il gruppo di entità",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Regime fiscale semplificato",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Recargo di equivalenza",
     "es-tax-regime-telecom": "Regimi speciali applicabili ai servizi di telecomunicazioni, radiodiffusione o televisivi e ai servizi erogati via elettronica",
     "es-tax-regime-travel": "Regime fiscale speciale per le agenzie di viaggio",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "carica-piano-conti-predefinito",
     "loading-controller": "Controller di caricamento: '0'",
+    "local-business-rental": "Alquiler locales",
     "location": "Posizione",
     "lock-accounting": "Blocca contabilità",
     "lock-entry": "Blocca voce",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts è un software di fatturazione e contabilità per le piccole imprese. Si tratta di software libero sotto licenza GNU \/ LGPL.",
     "method-payment": "Metodo di pagamento",
     "mime-type": "Tipo MIME",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Importo minimo con CIF\/NIF",
     "minimum-amount-without-cifnif": "Importo minimo senza CIF\/NIF",
     "minimum-stock": "Scorta minima",
@@ -1105,7 +1119,9 @@
     "opened": "Aperto",
     "opening-acounting-completed": "Apertura dell'esercizio corretta",
     "opening-operation": "Apertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operazione",
+    "operation-export": "Operazione di esportazione",
     "operator": "Operatore",
     "option": "opzione",
     "optional": "facoltativo",
@@ -1180,6 +1196,8 @@
     "phones": "Telefoni",
     "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
     "php-extension-not-found": "Non hai installato l'estensione PHP %extension%.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
     "php-version-too-new": "Si raccomanda di utilizzare una versione di PHP tra la %min_version% e la %max_version%. Attualmente hai la %version%",
     "physical-stock": "Stock fisico",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
     "plugins": "Plugins",
     "plugins-p": "I plugin permettono di aggiungere nuove funzionalità. Attiva quelli di cui hai bisogno ora, o fallo quando vuoi dal menu amministratore.",
+    "plugins-required": "Plugins requeridos",
     "points": "Punti",
     "points-of-interest": "Punti di interesse",
     "port": "Puerto",
@@ -1418,7 +1437,8 @@
     "serierb": "Serie RB",
     "series": "serie",
     "server": "Server",
-    "server-software": "Software del servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-software": "Software del server",
     "service": "Servizio",
     "services": "servizi",
     "settings": "Impostazioni",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotale",
     "subtract": "Sottrarre",
     "success": "successo",
+    "successive-tract": "successive-tract",
     "sum": "Somma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
@@ -1653,7 +1674,7 @@
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
     "unsafe-file": "Archivo no seguro",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Per motivi di sicurezza impediamo i download di alcune tipologie di file, come questo: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
     "until-subaccount": "Fino a subconto",
@@ -1735,6 +1756,7 @@
     "wizard": "Assistente",
     "wizard-p": "Compila questo modulo sul tuo business per completare la configurazione.",
     "wizard-plugins": "Un plugin è un componente che aggiunge nuove funzionalità. Seleziona i plugin che desideri attivare immediatamente, o fallo più tardi dal pannello di controllo.",
+    "work-certification": "Certificación",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
     "works": "Lavori",
