--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Zezwól na sprzedaż bez stanu magazynowego",
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Zezwól na modyfikację",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Zawsze na email firmy",
     "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
@@ -158,6 +160,7 @@
     "barcode": "Kod kreskowy",
     "bcc": "BCC",
     "become-sponsor": "Zostań sponsorem",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Duży",
     "billing": "Fakturowanie",
     "billing-address": "Adres do faktury",
@@ -570,12 +573,16 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "Hiszpania: wyjątek z artykułu 22 ustawy o VAT",
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
     "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Rolnictwo, hodowla zwierząt i rybołówstwo",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Reżim ogólny",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Reżim uproszczony",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Dopłata równoważna",
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Wczytaj domyślny plan rachunkowości",
     "loading-controller": "Ładowanie kontrolera: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Lokalizacja",
     "lock-accounting": "Zablokować księgowość",
     "lock-entry": "Zablokuj wpis",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts to oprogramowanie do fakturowania i księgowości dla małych i średnich przedsiębiorstw. Jest to oprogramowanie wolne na licencji GNU\/LGPL.",
     "method-payment": "Metoda płatności",
     "mime-type": "Typ MIME",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Minimalna kwota z CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Minimalny zapas",
@@ -1105,7 +1119,9 @@
     "opened": "Otwarty",
     "opening-acounting-completed": "Prawidłowe otwarcie ćwiczenia",
     "opening-operation": "Otwarcie",
+    "operating-system": "Sistema Operativo",
     "operation": "Operacja",
+    "operation-export": "Operación exportación",
     "operator": "Operator",
     "option": "Opcja",
     "optional": "opcjonalny",
@@ -1180,6 +1196,8 @@
     "phones": "Telefony",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "Wsparcie dla PHP %current% wkrótce się kończy. Proszę zaktualizować PHP do wersji %min% lub wyższej.",
     "php-version-too-new": "Zaleca się użycie wersji PHP pomiędzy %min_version% a %max_version%. Obecnie masz %version%",
     "physical-stock": "Alyz fizyczny",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
     "plugins": "Wtyczki",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
+    "plugins-required": "Plugins requeridos",
     "points": "Punkty",
     "points-of-interest": "Punkty zainteresowania",
     "port": "Port",
@@ -1418,6 +1437,7 @@
     "serierb": "Seria RB",
     "series": "Serie",
     "server": "Serwer",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Oprogramowanie serwera",
     "service": "Usługa",
     "services": "Usługi",
@@ -1508,6 +1528,7 @@
     "subtotal": "Suma częściowa",
     "subtract": "Odjąć",
     "success": "Sukces",
+    "successive-tract": "successive-tract",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Suma netto linii podatku musi wynosić: %lineNet%",
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
@@ -1735,6 +1756,7 @@
     "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
     "wizard-plugins": "Wtyczka to dodatek, który dodaje nowe funkcjonalności. Wybierz wtyczki, które chcesz aktywować od razu, lub zrób to później z panelu sterowania.",
+    "work-certification": "Certificación",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
     "works": "Prace",
