--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Permitir venda sem estoque",
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Sempre para o e-mail da empresa",
     "amount": "Valor",
     "amount-without-discount": "preço sem desconto",
@@ -158,6 +160,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Torne-se patrocinador",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -570,12 +573,16 @@
     "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "exceção de imposto - sujeito passivo",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Regime especial da agricultura, pecuária e pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Regime geral",
     "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Sobretaxa de equivalência",
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
     "es-tax-regime-travel": "Regime especial das agências de viagens",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Carregando controlador: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts é um software de faturamento e contabilidade para PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
     "minimum-amount-without-cifnif": "Importe mínimo sem CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
@@ -1105,7 +1119,9 @@
     "opened": "Aberto",
     "opening-acounting-completed": "Abertura de exercício correta",
     "opening-operation": "Abertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operação",
+    "operation-export": "Operación exportación",
     "operator": "Operador",
     "option": "Opção",
     "optional": "opcional",
@@ -1180,6 +1196,8 @@
     "phones": "Telefones",
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
@@ -1205,6 +1223,7 @@
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
+    "plugins-required": "Plugins requeridos",
     "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
     "port": "Porto",
@@ -1418,6 +1437,7 @@
     "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Software del servidor",
     "service": "Serviço",
     "services": "Serviços",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "Sucesso",
+    "successive-tract": "successive-tract",
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
     "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
@@ -1735,6 +1756,7 @@
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
+    "work-certification": "Certificación",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
