--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Permetre la venda sense estoc",
     "allow-sale-without-stock-n": "Permetre la venda sense estoc en nous productes",
     "allow-update": "Permetre l'actualització",
+    "already-installed": "Ya instalado",
+    "already-installed-p": "El programa ya está instalado",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Import",
     "amount-without-discount": "Preu sense desconte",
@@ -158,6 +160,7 @@
     "barcode": "Còdic de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
@@ -570,12 +573,16 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
+    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
     "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, ramaderia i pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, ramaderia i pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Règim general",
     "es-tax-regime-gold": "Régimen especial de l'or d'inversió",
     "es-tax-regime-group-entities": "Règim especial del grup d'entitats",
+    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Règim simplificat",
+    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
     "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
     "es-tax-regime-travel": "Règim especial de les agències de viatges",
@@ -914,6 +925,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar pla comptable predeterminat",
     "loading-controller": "Carregant el controlador: '%controllerName%'",
+    "local-business-rental": "Alquiler locales",
     "location": "Localisació",
     "lock-accounting": "Bloquejar comptabilitat",
     "lock-entry": "Bloquejar assentament",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts és un software de facturació i contabilitat per a xicotetes i mitjanes empreses. És software lliure baix la llicència GNU\/LGPL.",
     "method-payment": "Forma de pagament",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Import mínim amb CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
     "minimum-stock": "Estoc mínim",
@@ -1105,7 +1119,9 @@
     "opened": "Obert",
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Obertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operació",
+    "operation-export": "Operación exportación",
     "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
@@ -1180,6 +1196,8 @@
     "phones": "Teléfons",
     "php-extension-needed": "Es requereix l'extensió %extension% en la configuració de PHP",
     "php-extension-not-found": "No tens instalada l'extensió PHP %extension%.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana usar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Actualització del complement %pluginName% a la versió %version%",
     "plugins": "Complements",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
+    "plugins-required": "Plugins requeridos",
     "points": "Punts",
     "points-of-interest": "Punts d'interès",
     "port": "Port",
@@ -1418,6 +1437,7 @@
     "serierb": "Sèrie RB",
     "series": "Séries",
     "server": "Servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Programari del servidor",
     "service": "Servici",
     "services": "Serveis",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "success",
+    "successive-tract": "successive-tract",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les llínees del IVA deuria ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals del IVA de les llínees del IVA ha de ser: %lineTotalTax%",
@@ -1652,7 +1673,7 @@
     "unlink-install-ok": "Instal·lació borrada del registre correctament.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagat",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Arxiu no segur",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins a",
@@ -1735,6 +1756,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
+    "work-certification": "Certificación",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "works": "Treballs",
