--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -91,6 +91,8 @@
     "allow-sale-without-stock": "Permet la venda sense estoc",
     "allow-sale-without-stock-n": "Permetre la venda sense estoc en nous productes",
     "allow-update": "Permetre modificar",
+    "already-installed": "Ja instal·lat",
+    "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Import",
     "amount-without-discount": "Preu sense descompte",
@@ -158,6 +160,7 @@
     "barcode": "Codi de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
+    "benefit-3-parties": "benefit-3-parties",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
@@ -389,8 +392,8 @@
     "data-source": "Dades d'origen",
     "database": "Base de dades",
     "database-error": "Error en connectar a la base de dades",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-pc": "🖥️ Si el programa està instal·lat al teu PC, probablement se t'hagi oblidat activar MySQL o tingui problemes per activar-se.",
+    "database-error-server": "🌎 si el programa està instal·lat en un servidor o hosting, probablement hagis canviat l'usuari o la contrasenya de la base de dades, o hagis arribat a algun límit d'ús del hosting.",
     "database-name-must-be-lowercase": "El nom de la base de dades ha de ser en minúscules",
     "date": "Data",
     "date-in": "Data d'entrada",
@@ -570,12 +573,16 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Errades",
     "es_EC": "Espanyol (Ecuador)",
+    "es-tax-exception-art-14": "excepció fiscal art. 14",
+    "es-tax-exception-art-7": "excepció fiscal art. 7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
     "es-tax-exception-e2": "Espanya: excepció per l'article 21 de la Llei de l'IVA",
     "es-tax-exception-e3": "Espanya: excepció per l'article 22 de la Llei de l'IVA",
     "es-tax-exception-e4": "Espanya: excepció per l'article 23 i 24 de la Llei de l'IVA",
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
+    "es-tax-exception-location-rules": "excepció fiscal per normes de localització",
+    "es-tax-exception-passive-subject": "excepció fiscal subjecte passiu",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
     "es-tax-regime-especial-agp": "Règim especial de l'agricultura, la ramaderia i la pesca",
@@ -583,7 +590,11 @@
     "es-tax-regime-general": "Règim general",
     "es-tax-regime-gold": "Règim especial de l'or d'inversió",
     "es-tax-regime-group-entities": "Règim especial del grup dentitats",
+    "es-tax-regime-one-stop-shop-ioss": "règim fiscal de guichet únic IOSS",
+    "es-tax-regime-one-stop-shop-oss": "règim fiscal de guichet únic OSS",
     "es-tax-regime-simplified": "Règim simplificat",
+    "es-tax-regime-special-retail-traders": "règim fiscal especial para minoristes",
+    "es-tax-regime-special-small-business": "règim fiscal especial per a petites empreses",
     "es-tax-regime-surcharge": "Recàrrec d'equivalència",
     "es-tax-regime-telecom": "Règims especials aplicables als serveis de telecomunicacions, de radiodifusió o de televisió i als prestats per via electrònica",
     "es-tax-regime-travel": "Règim especial de les agències de viatges",
@@ -807,8 +818,8 @@
     "invalid-iso-code": "Codi ISO '%iso-code%' no vàlid",
     "invalid-number": "Número no vàlid: %number%",
     "invalid-request": "Petició no vàlida",
-    "invalid-token": "Token no válido",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token": "Token no vàlid",
+    "invalid-token-p": "El token d'accés per a l'arxiu %file% no és vàlid o ha caducat",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
     "invalid-web": "Adreça web no vàlida",
     "invoice": "Factura",
@@ -914,6 +925,7 @@
     "list": "Llista",
     "load-def-acc-plan": "Carregar pla comptable predeterminat",
     "loading-controller": "Carregant controlador: '%controllerName%'",
+    "local-business-rental": "Lloguer de locals",
     "location": "Localització",
     "lock-accounting": "Bloquejar comptabilitat",
     "lock-entry": "Bloquejar assentament",
@@ -984,6 +996,8 @@
     "meta-description": "FacturaScripts és un programari de facturació i comptabilitat per a pimes. Es tracta de programari lliure sota la llicència GNU\/LGPL.",
     "method-payment": "Mètode de pagament",
     "mime-type": "Mime Type",
+    "min-fs-version": "Versión min. Core",
+    "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Mínim import amb CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
     "minimum-stock": "Stock mínim",
@@ -1105,7 +1119,9 @@
     "opened": "Obert",
     "opening-acounting-completed": "Obertura d'exercici correcta",
     "opening-operation": "Obertura",
+    "operating-system": "Sistema Operativo",
     "operation": "Operació",
+    "operation-export": "Operació d'exportació",
     "operator": "Operador",
     "option": "Opció",
     "optional": "Opcional",
@@ -1180,6 +1196,8 @@
     "phones": "Telèfons",
     "php-extension-needed": "Es requereix l'extensió %extension% a la configuració de PHP",
     "php-extension-not-found": "No tens l'extensió %extension% de PHP instal·lada.",
+    "php-extensions": "Extensiones PHP",
+    "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "El suport per a PHP %current% acabarà aviat. Si us plau, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana utilitzar una versió de PHP entre %min_version% i %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
@@ -1205,6 +1223,7 @@
     "plugin-update": "Actualització del plugin %pluginName% a la versió %version%",
     "plugins": "Plugins",
     "plugins-p": "Els plugins permeten afegir noves funcions.  Activa els que necessitis ara, o fes-ho des del menú administrador.",
+    "plugins-required": "Plugins requeridos",
     "points": "punts",
     "points-of-interest": "Punts d'interès",
     "port": "Port",
@@ -1418,6 +1437,7 @@
     "serierb": "Sèrie RB",
     "series": "Sèries",
     "server": "Servidor",
+    "server-accepts-filesize": "Tamaño máx. subida archivos",
     "server-software": "Programari del servidor",
     "service": "Servei",
     "services": "Serveis",
@@ -1508,6 +1528,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Èxit",
+    "successive-tract": "successive-tract",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les línies d'IVA ha de ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals de l'IVA de les línies d'IVA ha de ser: %lineTotalTax%",
@@ -1652,8 +1673,8 @@
     "unlink-install-ok": "Instal·lació esborrada del registre correctament.",
     "unlock-entry": "Desbloquejar",
     "unpaid": "Impagat",
-    "unsafe-file": "Archivo no seguro",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file": "Arxiu no segur",
+    "unsafe-file-p": "Per motius de seguretat impedim les descàrregues d'alguns tipus d'arxius, com aquest: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins (data)",
     "until-subaccount": "Fins a subcompte",
@@ -1735,6 +1756,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
+    "work-certification": "Certificación",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
     "works": "Feines",
